Fixed more layout issues, and loading message bug

--- a/css/style.css
+++ b/css/style.css
@@ -96,19 +96,25 @@ ul.horizontal li{
 	color: #D7D7D7;	
 }
 
+ul.horizontal li.nomargin{
+	margin-right: 0;
+}
+
 ul.filter li{
 	display: inline;
 	float: left;
 	margin-right: 30px;
 	color: #D7D7D7;	
 }
-
+ul.filter li.nomargin{
+	margin-right: 0;
+}
 li.search{
 	margin-right: 8px;
 }
 
 li.nomargin{
-	margin: 0;
+	margin-right: 0;
 }
 
 ul.search-shortcuts{
